force-app/main/default/objects/G_L_Feeder__c/G_L_Feeder__c.object-meta.xml
<CustomObject>
    <description>This object holds Transaction data to be sent to the GL each day and is populated by a nightly batch job.</description>
    <label>G/L Feeder</label>
    <nameField>
        <displayFormat>GL-{000000000}</displayFormat>
        <label>G/L Feeder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G/L Feeders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>