force-app/main/default/objects/G_L_Feeder__c/fields/CreatedDateTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTimeStamp__c</fullName>
    <label>Created Date Time Stamp</label>
    <type>DateTime</type>
</CustomField>