force-app/main/default/objects/G_L_Feeder__c/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <label>Donor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>