force-app/main/default/objects/G_L_Feeder__c/fields/Fund_Group__c.field-meta.xml
<CustomField>
    <fullName>Fund_Group__c</fullName>
    <label>Fund Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>