force-app/main/default/objects/G_L_Feeder__c/fields/Fund_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Open_Date__c</fullName>
    <label>Fund Open Date</label>
    <type>Date</type>
</CustomField>