force-app/main/default/objects/G_L_Feeder__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>OG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>