force-app/main/default/objects/G_L_Feeder__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>