force-app/main/default/objects/G_L_Feeder__c/fields/Session_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Approval_Date__c</fullName>
    <label>Session Approval Date</label>
    <type>Date</type>
</CustomField>